Reset _httpProtocolHandlerDelegate in MainController

IOSIOThread checks that all references to SystemURLRequestContextGetter
have been released on shutdown.
This causes a DCHECK.

Bug: 893486
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I7f7987e9f3cb8a3cc978d05347f6ac8c305b3bc9
Reviewed-on: https://chromium-review.googlesource.com/c/1269866
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598263}
Former-commit-id: f4c714f7171b3f501264dbf01301fff2cd0497f0